@@ -3,7 +3,7 @@ Version: 0.2
 Title: You didn't know you didn't know?
 Author: Matthew Dowle
 Maintainer: Matthew Dowle <mdowle@mdowle.plus.com>
-Depends: tcltk
+Depends: tcltk,utils
 Description: Utility to quickly find useful functions in R that you didn't know you didn't know.
 License: GPL
 URL: http://unknownr.r-forge.r-project.org/
